# incident_intelligencep_prj1

./: .dockerignore  .env.example  .gitignore  CICDSteps.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task-definition.json
.github/workflows/: ci-cd.yml  deploy.yml
abid/: README.md  pyproject.toml
abid/src/log_analyst/: crew.py  main.py
abid/src/log_analyst/config/: agents.yaml  tasks.yaml
abid/src/log_analyst/tools/: __init__.py  custom_tool.py
infra/: ecs-task-definition.json
input/dynatrace_logs/: sample_incident_logs.jsonl
output/: deployment_analysis.json  infrastructure_analysis.json  log_analysis.json  resolution.json  root_cause_analysis.json  triage.json
src/incident_intelligencep_prj1/: config.py  crew.py  fallback_analysis.py  main.py  s3_storage.py
src/incident_intelligencep_prj1/config/: agents.yaml  tasks.yaml
src/incident_intelligencep_prj1/tools/: __init__.py  dynatrace_tool.py  github_tool.py  log_reader_tool.py  servicenow_tool.py
src/incident_intelligencep_prj1/utils/: s3_download.py  s3_upload.py  tests3.py
tests/: test_runtime.py  test_s3_integration.py  test_smoke.py
