[project]
name = "log_analyst"
version = "0.1.0"
description = "log_analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.119.0"
]

[project.scripts]
log_analyst = "log_analyst.main:run"
run_crew = "log_analyst.main:run"
train = "log_analyst.main:train"
replay = "log_analyst.main:replay"
test = "log_analyst.main:test"
run_with_trigger = "log_analyst.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
